...
            VStack(alignment: .leading) {
                FeaturesRow(text: "View the full menu.")
                FeaturesRow(text: "Select and order your meals.")
                FeaturesRow(text: "Save your favorite menu items.")
            }
            Spacer()
            Button("Press to dismiss") {
                dismiss()
            }
        }
    }
}

...
